# proyecto

./: ESTRUCTURA_MODULAR.md  README.md  RESUMEN_EJECUTIVO.md  SOLUCION_MATEMATICA.md  main_modular.py  proyecto.md  pyproject.toml  test.py
src/: __init__.py  admm_solver.py  config.py  data_loader.py  denoiser.py  metrics.py  noise_model.py  visualization.py
